[bing] css update
should fix points not being rewarded, frame's rendered but won't be on-screen

--- a/bing.html
+++ b/bing.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <head>
-	<style>body{background-color:#000;color:#eee;}iframe{display:none;}</style>
+	<style>body{background-color:#000;color:#eee;overflow: hidden;}iframe{position: absolute;top:10000%;right:10000%;}</style>
 </head>
 <body>
 <code id="logbox">currently searching, please don't close this tab.</code>
