--- a/url.html
+++ b/url.html
@@ -1,12 +1,13 @@
+<!DOCTYPE HTML>
 <head>
   <title>minimal url redirector</title>
   <script>
-    let url = window.location.href.split("?url=")
+    let url = window.location.href.split("?url=");
     if (url.length == 2) {
-      window.location.url = url[1]
+      window.location.url = url[1];
     } else if (url.length > 2) { // edge case!
-      url.shift()
-      window.location.href = url.join("?url=")
+      url.shift();
+      window.location.href = url.join("?url=");
     }
   </script>
 </head>
