--- a/url.html
+++ b/url.html
@@ -4,7 +4,7 @@
   <script>
     let url = window.location.href.split("?url=");
     if (url.length == 2) {
-      window.location.url = url[1];
+      window.location.href = url[1];
     } else if (url.length > 2) { // edge case!
       url.shift();
       window.location.href = url.join("?url=");
